--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,3 +18,5 @@ commands:
     description:
   deathpoint:
     description: Gibt dir deinen Death Point
+  voterestart:
+    description: Vote für restarts
