--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java'
-    id "com.github.johnrengelman.shadow" version "5.2.0"
+    id "com.github.johnrengelman.shadow" version "7.1.0"
+    id "xyz.jpenilla.run-paper" version "1.0.5"
 }
 
 group 'org.example'
-version 1.2
+version 1.3
 
 repositories {
     mavenCentral()
@@ -12,16 +13,26 @@ repositories {
         name = 'papermc-repo'
         url = 'https://papermc.io/repo/repository/maven-public/'
     }
+    maven { url = uri("https://papermc.io/repo/repository/maven-public/") }
     maven {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
+
     mavenLocal()
+
 }
 
 dependencies {
-    implementation "org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT"
+    implementation "org.spigotmc:spigot:1.18-R0.1-SNAPSHOT"
     implementation files ('lib/Discord-Webhooks-API-WithDependencies.jar')
+    implementation ("io.papermc.paper:paper-api:1.18-R0.1-SNAPSHOT")
 }
 
 compileJava.options.encoding = "UTF-8"
+
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
+}
