--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,6 @@ group 'org.example'
 version 1.3
 
 repositories {
-    mavenCentral()
-    maven {
-        name = 'papermc-repo'
-        url = 'https://papermc.io/repo/repository/maven-public/'
-    }
-    maven { url = uri("https://papermc.io/repo/repository/maven-public/") }
     maven {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
@@ -28,11 +22,17 @@ repositories {
 dependencies {
     implementation "org.spigotmc:spigot:1.18-R0.1-SNAPSHOT"
     implementation files ('lib/Discord-Webhooks-API-WithDependencies.jar')
-    implementation ("io.papermc.paper:paper-api:1.18-R0.1-SNAPSHOT")
+    //implementation ("io.papermc.paper:paper-api:1.18-R0.1-SNAPSHOT")
 }
 
 compileJava.options.encoding = "UTF-8"
 
 java {
     toolchain.languageVersion.set(JavaLanguageVersion.of(17))
+}
+
+tasks {
+    runServer {
+        minecraftVersion("1.18")
+    }
 }
