--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,5 +11,7 @@ jobs:
           java-version: 17
           distribution: 'adopt'
           cache: gradle
+      - name: Get Spigot server
+        run: curl -o "https://hub.spigotmc.org/jenkins/job/BuildTools/lastStableBuild/" && java -jar BuildTools.jar --rev latest
       - name: Build with Gradle
         run: ./gradlew build
