--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group 'org.example'
 version 1.10
 
 repositories {
-    //mavenLocal()
+    mavenLocal()
     maven {
         url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
     }
