--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,8 +1,51 @@
 name: CI
 on: [push]
 jobs:
+
+  caves_1_18_1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up JDK 17 # 1.18.1 can only be built with Java 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+      - name: Cache 1.18.1 Maven package
+        id: cacheCaves
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/
+            ~/.m2/repository/org/spigotmc/spigot-parent/
+            ~/.m2/repository/org/spigotmc/minecraft-server/
+          key: ${{ runner.os }}-spigot-1.18.1-all
+          restore-keys: ${{ runner.os }}-spigot-1.18.1-all
+      - name: Cache Maven packages
+        id: cacheMain
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2_1.18.1
+          restore-keys: ${{ runner.os }}-m2_1.18.1
+
+      - name: Setup BuildTools
+        run: mkdir BuildTools && wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
+      - name: Check 1.18.1 Spigot
+        id: caves
+        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/spigot-1.18.1-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
+      - name: Check 1.18.1 Spigot (Mojang)
+        id: cavesMojang
+        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/spigot-1.18.1-R0.1-SNAPSHOT-remapped-mojang.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
+      - name: Check 1.18.1 Spigot (Obf)
+        id: cavesObf
+        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/spigot-1.18.1-R0.1-SNAPSHOT-remapped-obf.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
+      - name: Build 1.18.1
+        if: steps.caves.outputs.sucess != 'true' || steps.cavesMojang.outputs.sucess != 'true' || steps.cavesObf.outputs.sucess != 'true'
+        run: cd BuildTools && java -jar BuildTools.jar --rev 1.18.1 --remapped
+
   build:
     runs-on: ubuntu-latest
+    needs: [caves_1_18_1]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
@@ -11,5 +54,15 @@ jobs:
           java-version: 17
           distribution: 'adopt'
           cache: gradle
+      - name: Cache 1.18.1 Maven package
+        id: cacheCaves
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/
+            ~/.m2/repository/org/spigotmc/spigot-parent/
+            ~/.m2/repository/org/spigotmc/minecraft-server/
+          key: ${{ runner.os }}-spigot-1.18.1-all
+          restore-keys: ${{ runner.os }}-spigot-1.18.1-all
       - name: Build with Gradle
         run: ./gradlew build
