--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,50 +2,41 @@ name: CI
 on: [push]
 jobs:
 
-  caves_1_18_1:
+  buildtools:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up JDK 17 # 1.18.1 can only be built with Java 17
-        uses: actions/setup-java@v2
+      - uses: SpraxDev/Action-SpigotMC@v3
         with:
-          distribution: 'adopt'
-          java-version: '17'
-      - name: Cache 1.18.1 Maven package
-        id: cacheCaves
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/
-            ~/.m2/repository/org/spigotmc/spigot-parent/
-            ~/.m2/repository/org/spigotmc/minecraft-server/
-          key: ${{ runner.os }}-spigot-1.18.1-all
-          restore-keys: ${{ runner.os }}-spigot-1.18.1-all
-      - name: Cache Maven packages
-        id: cacheMain
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2_1.18.1
-          restore-keys: ${{ runner.os }}-m2_1.18.1
-
-      - name: Setup BuildTools
-        run: mkdir BuildTools && wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-      - name: Check 1.18.1 Spigot
-        id: caves
-        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/spigot-1.18.1-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Check 1.18.1 Spigot (Mojang)
-        id: cavesMojang
-        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/spigot-1.18.1-R0.1-SNAPSHOT-remapped-mojang.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Check 1.18.1 Spigot (Obf)
-        id: cavesObf
-        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.18.1-R0.1-SNAPSHOT/spigot-1.18.1-R0.1-SNAPSHOT-remapped-obf.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Build 1.18.1
-        if: steps.caves.outputs.sucess != 'true' || steps.cavesMojang.outputs.sucess != 'true' || steps.cavesObf.outputs.sucess != 'true'
-        run: cd BuildTools && java -jar BuildTools.jar --rev 1.18.1 --remapped
+          # A comma-separated list of Spigot version that should be compiled
+          # These values are later given to the BuildTools.jar as '--rev' argument
+          #
+          # Example: latest, 1.14.4, 1.8.8
+          versions: latest # Optio
+          # Should sources be generated?
+          # If enabled, BuildTools is provided the '--generate-source' argument
+          generateSrc: false # Optio
+          # Should the documentation be generated?
+          # If enabled, BuildTools is provided the '--generate-docs' argument
+          generateDoc: false # Optio
+          # Should we disable the BuildTools's Java-Version-Check?
+          # If enabled, BuildTools is provided the '--disable-java-check' argument
+          disableJavaCheck: false # Optio
+          # Disables the check for existing files in the local maven repository
+          # Normally, a version is skipped if it is already installed
+          # in the local maven repository to speed up build time
+          forceRun: false # Optio
+          # The amount of builds allowed to run at the same time
+          # Set to '-1' to use system's cpu core count
+          threads: -1 # Optio
+          # You can choose between different BuildTools to be used by this action
+          # ~~'SpraxDev' is my fork of SpigotMC's that introduces some changes (https://github.com/SpraxDev/Spigot-BuildTools/#breaking-changes)~~
+          # My (SpraxDev) provider is causing some builds to fail depending on the build environment
+          # Available: SpraxDev, SpigotMC
+          buildToolProvider: SpigotMC # Optional
 
   build:
     runs-on: ubuntu-latest
-    needs: [caves_1_18_1]
+    needs: [buildtools]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
