--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id "com.github.johnrengelman.shadow" version "7.1.0"
     id "xyz.jpenilla.run-paper" version "1.0.5"
+    id"io.papermc.paperweight.userdev" version "1.3.4-SNAPSHOT"
 }
 
 group 'org.example'
@@ -10,15 +11,11 @@ version 1.10
 repositories {
     mavenLocal()
     //mavenCentral()
-    maven {
-        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
-    }
-    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
-    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
 }
 
 dependencies {
-    implementation'org.spigotmc:spigot:1.18-R0.1-SNAPSHOT'
+    paperweightDevelopmentBundle("io.papermc.paper:dev-bundle:1.18.1-R0.1-SNAPSHOT")
+    //implementation'org.spigotmc:spigot:1.18-R0.1-SNAPSHOT'
     //implementation files ('lib/spigot-1.18.1.jar')
     implementation files ('lib/Discord-Webhooks-API-WithDependencies.jar')
     //implementation ("io.papermc.paper:paper-api:1.18-R0.1-SNAPSHOT")
