--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id "com.github.johnrengelman.shadow" version "7.1.0"
     id "xyz.jpenilla.run-paper" version "1.0.5"
-    id"io.papermc.paperweight.userdev" version "1.3.4-SNAPSHOT"
+    id"io.papermc.paperweight.userdev" version "1.3.3"
 }
 
 group 'org.example'
