--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,3 +13,22 @@ jobs:
           cache: gradle
       - name: Build with Gradle
         run: ./gradlew build
+
+  createJar:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+          cache: gradle
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - run: ./gradlew shadowJar
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Package
+          path: build/libs
