--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,17 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - run: ./gradlew shadowJar
-      - uses: actions/upload-artifact@v2
+
+  uploadJar:
+    runs-on: ubuntu-latest
+    needs: createJar
+    steps:
+      - uses: actions/checkout@v2
+      - run: mkdir -p built/Plugin.jar
+
+      - run: echo hello > built/Plugin.jar
+
+      - uses: actions/upload-artifact@v3
         with:
-          name: Package
-          path: build/libs
+          name: StationofdoomPlugin
+          path: built/Plugin.jar
