--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,9 +36,7 @@ jobs:
     needs: createJar
     steps:
       - uses: actions/checkout@v2
-      - run: mkdir -p built/
-      - run: echo hello > built/Plugin.jar
       - uses: actions/upload-artifact@v3
         with:
           name: StationofdoomPlugin
-          path: built/Plugin.jar
+          path: build/libs/*
