--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: createJar
     steps:
+      - run: ls
       - uses: actions/checkout@v2
       - uses: actions/upload-artifact@v3
         with:
