--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,4 +40,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: StationofdoomPlugin
-          path: build/libs/*
+          path: /build/libs/*
