--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,10 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - run: ./gradlew shadowJar
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Package
+          path: build/libs
 
   uploadJar:
     runs-on: ubuntu-latest
@@ -39,5 +43,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/upload-artifact@v3
         with:
-          name: StationofdoomPlugin
+          name: Package
           path: build/libs
