--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - run: ./gradlew shadowJar
+      - name: Upload artifact
       - uses: actions/upload-artifact@v3
         with:
-          name: Package
+          name: StationofdoomPlugin
           path: build/libs
