--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - run: ./gradlew shadowJar
-      - uses: actions/upload-artifact@v3
-      - name: Upload artifact
+        uses: actions/upload-artifact@v3
         with:
           name: StationofdoomPlugin
           path: build/libs
