--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,7 @@ jobs:
           distribution: 'adopt'
           cache: gradle
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@1.0.5
+        uses: gradle/wrapper-validation-action@v1
       - name: Build with Gradle
         run: ./gradlew build
 
@@ -28,7 +28,7 @@ jobs:
           distribution: 'adopt'
           cache: gradle
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@1.0.5
+        uses: gradle/wrapper-validation-action@v1
       - run: ./gradlew shadowJar
       - name: Upload artifact
         uses: actions/upload-artifact@v3.1.2
