--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     paperweightDevelopmentBundle("io.papermc.paper:dev-bundle:1.19.3-R0.1-SNAPSHOT")
     implementation files ('lib/Discord-Webhooks-API-WithDependencies.jar')
+    implementation ('com.google.code.gson:gson:2.10.1')
 }
 
 compileJava.options.encoding = "UTF-8"
