--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,7 +39,12 @@ jobs:
           name: StationofdoomPlugin
           path: build/libs
       - name: Get Artifact Version
-        run: echo "::set-output name=version::ls build/libs/*jar | grep -oP "(?<=-)\d+\.\d+\.\d+(?:\.\d+)?""
+        id: get_version
+        run: |
+          version=$(ls build/libs/*jar | grep -oP "(?<=-)\d+\.\d+\.\d+(?:\.\d+)?")
+          echo $version
+        shell: bash
+
       - name: Release
         uses: ncipollo/release-action@v1.12.0
         with:
