--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: StationofDoom
 version: 1.11.1
 main: de.j.stationofdoom.main.Main
-api-version: 1.20
+api-version: '1.20'
 load: STARTUP
 authors: [ 12jking ]
 
