--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,6 +7,7 @@ on:
     types:
       - opened
       - synchronize
+      - closed
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,6 +27,7 @@ jobs:
   createJar:
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3.5.3
       - name: Set up JDK 17
