--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,6 +62,7 @@ jobs:
           FILE_PATH=$(find build/libs -name "*.jar" | head -n 1)
           FILE_NAME=$(basename "$FILE_PATH")
           version=$(echo "$FILE_NAME" | grep -o '[0-9.]\+')
+          version="${version%.}"
           echo "$version"
           echo "FILENAME=$version" >> $GITHUB_ENV
       - name: Release
