add plugin.yml plugin

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id "com.github.johnrengelman.shadow" version "8.1.1"
     id "xyz.jpenilla.run-paper" version "2.1.0"
+    id 'net.minecrell.plugin-yml.paper' version '0.6.0'
     id "io.papermc.paperweight.userdev" version "1.5.5"
 }
 
@@ -9,6 +10,7 @@ group 'org.example'
 version '1.11.2'
 
 repositories {
+    mavenCentral()
     mavenLocal()
 }
 
