--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
           cache: gradle
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.0.6
-      - run: ./gradlew shadowJar
+      - run: ./gradlew jar
       - name: Upload artifact
         uses: actions/upload-artifact@v3.1.2
         with:
