--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.1.0
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build --warning-mode all
 
   createJar:
     runs-on: ubuntu-latest
