--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,7 +39,7 @@ jobs:
         if: github.ref == 'refs/heads/master'
         uses: rickstaa/action-create-tag@v1.6.4
         with:
-          tag_name: "v${{ env.FILENAME }}.${{ github.run_number }}"
+          tag: "v${{ env.FILENAME }}.${{ github.run_number }}"
 
       - name: Change version in code
         if: github.ref == 'refs/heads/master'
