--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,6 +45,22 @@ jobs:
           name: StationofdoomPlugin
           path: build/libs
 
+  publishToRegistry:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4.0.0
+        with:
+          java-version: 17
+          distribution: 'adopt'
+          cache: gradle
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1.1.0
+      - name: Publish
+        run: gradle publish -jfrepositoryUsername=${{ secrets.repoToken }} -jfrepositoryPassword=${{ secrets.repoSecret }}
+
   releaseJar:
     runs-on: ubuntu-latest
     needs: createJar
