--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -60,12 +60,10 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.1.0
       - name: Publish
-        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
-        with:
-          arguments: publish
-        env:
-          MAVEN_USERNAME: ${{ secrets.REPOSECRET }}
-          MAVEN_PASSWORD: ${{ secrets.REPOTOKEN }}
+        run: |
+          ./gradlew publish \
+            -PgithubUsername=${{ secrets.REPOSECRET }} \
+            -PgithubToken=${{ secrets.REPOTOKEN }}
 
   releaseJar:
     runs-on: ubuntu-latest
