--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -94,3 +94,22 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: true
           tag: "v${{ env.FILENAME }}"
+
+  publishToModrinth:
+    runs-on: ubuntu-latest
+    needs: createJar
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4.0.0
+        with:
+          java-version: 17
+          distribution: 'adopt'
+          cache: gradle
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1.1.0
+      - name: Set version env variable
+        run: |
+          echo "runnumber=${{ github.run_number }}" >> $GITHUB_ENV
+      - run: ./gradlew modrinth
