--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -109,8 +109,8 @@ jobs:
           cache: gradle
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1.1.0
-      - name: Set version env variable
+      - name: Set env variables
         run: |
           echo "runnumber=${{ github.run_number }}" >> $GITHUB_ENV
-          echo "MODRINTH_TOKEN=${{ secrets.MODRINTH_TOKEN }}" >> $MODRINTH_TOKEN
+          echo "MODRINTH_TOKEN=${{ secrets.MODRINTH_TOKEN }}" >> $GITHUB_ENV
       - run: ./gradlew modrinth
