--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,7 @@ jobs:
           filters: |
             java:
               - 'src/java/**'
+              - 'build.gradle.kts'
 
   createJar:
     runs-on: ubuntu-latest
