use hole src dir

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           filters: |
             java:
-              - 'src/java/**'
+              - 'src/**'
               - 'build.gradle.kts'
 
   createJar:
