--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           filters: |
             java:
-              - 'src/java/**'
+              - 'src/**'
               - 'build.gradle.kts'
 
   createJar:
@@ -111,8 +111,8 @@ jobs:
 
   publishToModrinth:
     runs-on: ubuntu-latest
-    needs: createJar
-    if: ${{ github.ref == 'refs/heads/master' && needs.paths-filter.outputs.output1 == 'true' }}
+    needs: [createJar, releaseJar]
+    if: ${{ github.ref == 'refs/heads/master' }}
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
       - name: Set up JDK 21
