--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,7 +62,7 @@ jobs:
   publishToRegistry:
     runs-on: ubuntu-latest
     needs: build
-    if: false
+    if: ${{ github.ref == 'refs/heads/master' && needs.paths-filter.outputs.output1 == 'true' }}
     steps:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - name: Set up JDK 21
@@ -77,8 +77,8 @@ jobs:
         run: |
           ./gradlew publish
         env:
-          MAVEN_USERNAME: ${{ secrets.REPOTOKEN }}
-          MAVEN_PASSWORD: ${{ secrets.REPOSECRET }}
+          MAVEN_USERNAME: ${{ secrets.REPOSILITE_USER }}
+          MAVEN_PASSWORD: ${{ secrets.REPOSILITE_PW }}
 
   releaseJar:
     runs-on: ubuntu-latest
