--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -61,8 +61,8 @@ jobs:
 
   publishToRegistry:
     runs-on: ubuntu-latest
-    needs: build
-    if: false
+    needs: [createJar, paths-filter]
+    if: ${{ github.ref == 'refs/heads/master' && needs.paths-filter.outputs.output1 == 'true' }}
     steps:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - name: Set up JDK 21
@@ -73,12 +73,16 @@ jobs:
           cache: gradle
       - name: Validate Gradle wrapper
         uses: gradle/actions/wrapper-validation@v4.1.0
+      - name: Set env variables
+        run: |
+          echo "REPOSILITE_USER=${{ secrets.REPOSILITE_USER }}" >> $GITHUB_ENV
+          echo "REPOSILITE_PW=${{ secrets.REPOSILITE_PW }}" >> $GITHUB_ENV
       - name: Publish
         run: |
           ./gradlew publish
         env:
-          MAVEN_USERNAME: ${{ secrets.REPOTOKEN }}
-          MAVEN_PASSWORD: ${{ secrets.REPOSECRET }}
+          MAVEN_USERNAME: ${{ secrets.REPOSILITE_USER }}
+          MAVEN_PASSWORD: ${{ secrets.REPOSILITE_PW }}
 
   releaseJar:
     runs-on: ubuntu-latest
