--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -61,7 +61,7 @@ jobs:
 
   publishToRegistry:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [createJar, paths-filter]
     if: ${{ github.ref == 'refs/heads/master' && needs.paths-filter.outputs.output1 == 'true' }}
     steps:
       - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
