--- a/.github/workflows/repo.yml
+++ b/.github/workflows/repo.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   createRepo:
     runs-on: ubuntu-latest
-    if: ${{ github.event.release.prerelease == false }}
+    if: ${{ github.event.prerelease == false }}
     steps:
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
       - name: Set up JDK 21
