fixup! Publish snapshot releases to snapshot repo

--- a/.github/workflows/repo.yml
+++ b/.github/workflows/repo.yml
@@ -2,14 +2,12 @@ name: Repo
 
 on:
   release:
-    types:
-      - published
-      - edited
+    types: [published, edited, released]
 
 jobs:
   createRepo:
     runs-on: ubuntu-latest
-    if: ${{ github.event.prerelease == false }}
+    if: ${{ github.event.release.prerelease == false }}
     steps:
       - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
       - name: Set up JDK 21
