--- a/.gitignore
+++ b/.gitignore
@@ -98,57 +98,10 @@ modules.xml
 .idea/misc.xml
 *.ipr
 
-run/
+.gradle/**
+.idea/**
+apps/**
+build/**
 run/**
-.gradle/8.10.2/checksums/checksums.lock
-.gradle/8.10.2/checksums/md5-checksums.bin
-.gradle/8.10.2/checksums/sha1-checksums.bin
-.gradle/8.10.2/dependencies-accessors/gc.properties
-.gradle/8.10.2/executionHistory/executionHistory.bin
-.gradle/8.10.2/executionHistory/executionHistory.lock
-.gradle/8.10.2/fileChanges/last-build.bin
-.gradle/8.10.2/fileHashes/fileHashes.bin
-.gradle/8.10.2/fileHashes/fileHashes.lock
-.gradle/8.10.2/fileHashes/resourceHashesCache.bin
-.gradle/8.10.2/gc.properties
-.gradle/buildOutputCleanup/buildOutputCleanup.lock
-.gradle/buildOutputCleanup/cache.properties
-.gradle/buildOutputCleanup/outputFiles.bin
-.gradle/file-system.probe
-.gradle/vcs-1/gc.properties
-.idea/.name
-.idea/compiler.xml
-.idea/dataSources.xml
-.idea/discord.xml
-.idea/jarRepositories.xml
-.idea/material_theme_project_new.xml
-.idea/vcs.xml
-apps/postgres/**
-build/generated/plugin-yml/Bukkit/bukkit-libraries.json
-build/generated/plugin-yml/Bukkit/plugin.yml
-build/resources/main/bukkit-libraries.json
-build/resources/main/plugin.yml
-build/resources/main/translations.json
-build/tmp/compileJava/compileTransaction/stash-dir/Database.class.uniqueId16
-build/tmp/compileJava/compileTransaction/stash-dir/DeathListener.class.uniqueId1
-build/tmp/compileJava/compileTransaction/stash-dir/Difficulty.class.uniqueId15
-build/tmp/compileJava/compileTransaction/stash-dir/GameCMD.class.uniqueId6
-build/tmp/compileJava/compileTransaction/stash-dir/GUI.class.uniqueId5
-build/tmp/compileJava/compileTransaction/stash-dir/HandlePlayers.class.uniqueId2
-build/tmp/compileJava/compileTransaction/stash-dir/Introduction.class.uniqueId10
-build/tmp/compileJava/compileTransaction/stash-dir/InventoryListener.class.uniqueId0
-build/tmp/compileJava/compileTransaction/stash-dir/JoinListener.class.uniqueId18
-build/tmp/compileJava/compileTransaction/stash-dir/JumpAndRun$1.class.uniqueId9
-build/tmp/compileJava/compileTransaction/stash-dir/JumpAndRun$2.class.uniqueId14
-build/tmp/compileJava/compileTransaction/stash-dir/JumpAndRun.class.uniqueId7
-build/tmp/compileJava/compileTransaction/stash-dir/LeaveListener.class.uniqueId11
-build/tmp/compileJava/compileTransaction/stash-dir/Main.class.uniqueId8
-build/tmp/compileJava/compileTransaction/stash-dir/Minigame.class.uniqueId3
-build/tmp/compileJava/compileTransaction/stash-dir/PlayerData.class.uniqueId13
-build/tmp/compileJava/compileTransaction/stash-dir/PlayerDataDatabase.class.uniqueId17
-build/tmp/compileJava/compileTransaction/stash-dir/RespawnListener$1.class.uniqueId12
-build/tmp/compileJava/compileTransaction/stash-dir/RespawnListener.class.uniqueId4
-build/tmp/compileJava/previous-compilation-data.bin
-build/tmp/jar/MANIFEST.MF
-src/main/java/de/j/deathMinigames/commands/GameCMD.java~
+
 /.gitignore
