--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ services:
   postgres:
     image: postgres:17-alpine
     ports:
-      - 9667:5432
+      - 5432:5432
     volumes:
       - ./apps/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=65465
       - POSTGRES_USER=mc
       - POSTGRES_DB=stationofdoom
+      - POSTGRES_APPLICATION_NAME=stationofdoom
+      - POSTGRES_SCHEMA=public
